--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
   "ffmpeg-python>=0.2.0",
   "pydub>=0.25.0",
   "tqdm>=4.66.0",
+  "elevenlabs>=1.9.0",
+  "python-dotenv>=1.0.1",
   "lunii-packs",
 ]
 
