--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "python-dotenv>=1.0.1",
   "lunii-packs",
   "pipelex>=0.15.7",
+  "google-genai>=1.52.0",
 ]
 
 [project.optional-dependencies]
